WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80734
[V8] Fix a fixme in v8 bindings
https://bugs.webkit.org/show_bug.cgi?id=80734
Summary
[V8] Fix a fixme in v8 bindings
Erik Arvidsson
Reported
2012-03-09 14:58:43 PST
[V8] Fix a fixme in v8 bindings and inline fast case for toInt32 and toUInt32
Attachments
Patch
(4.52 KB, patch)
2012-03-09 15:01 PST
,
Erik Arvidsson
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.36 KB, patch)
2012-03-09 16:20 PST
,
Erik Arvidsson
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.33 KB, patch)
2012-03-09 16:23 PST
,
Erik Arvidsson
no flags
Details
Formatted Diff
Diff
Patch
(2.28 KB, patch)
2012-03-09 16:25 PST
,
Erik Arvidsson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Erik Arvidsson
Comment 1
2012-03-09 15:01:20 PST
Created
attachment 131119
[details]
Patch
Erik Arvidsson
Comment 2
2012-03-09 15:02:35 PST
toUInt32 and toInt32 are not used in normal DOM code paths so it is not very hot. I see WebGL related methods using it so I expect that this might have some benefit there.
Kentaro Hara
Comment 3
2012-03-09 15:11:10 PST
Comment on
attachment 131119
[details]
Patch This change looks good in that it removes FIXME. But basically I wanted to see some performance tests (e.g. "XXX becomes YYY% faster") if you intend to make some performance optimization (i.e. inlining). We are likely to make wasteful "optimization".
Erik Arvidsson
Comment 4
2012-03-09 16:04:20 PST
I made a quick test with ArrayBuffer and the inlining had no effect. Uploading new patch in a second
Erik Arvidsson
Comment 5
2012-03-09 16:20:29 PST
Created
attachment 131129
[details]
Patch for landing
Erik Arvidsson
Comment 6
2012-03-09 16:23:33 PST
Created
attachment 131131
[details]
Patch for landing
WebKit Review Bot
Comment 7
2012-03-09 16:25:16 PST
Attachment 131131
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/bindings/v8/V8Binding.cpp']" exit_code: 1 Source/WebCore/bindings/v8/V8Binding.cpp:246: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Total errors found: 1 in 1 files If any of these errors are false positives, please file a bug against check-webkit-style.
Erik Arvidsson
Comment 8
2012-03-09 16:25:55 PST
Created
attachment 131133
[details]
Patch
WebKit Review Bot
Comment 9
2012-03-09 21:05:10 PST
Comment on
attachment 131133
[details]
Patch Clearing flags on attachment: 131133 Committed
r110369
: <
http://trac.webkit.org/changeset/110369
>
WebKit Review Bot
Comment 10
2012-03-09 21:05:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug