[V8] Fix a fixme in v8 bindings https://bugs.webkit.org/show_bug.cgi?id=80734

Reviewed by Kentaro Hara.

No new tests. Covered by existing tests.

* bindings/v8/V8Binding.cpp:
(WebCore::toInt32):
(WebCore::toUInt32):


Canonical link: https://commits.webkit.org/97961@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110369 268f45cc-cd09-0410-ab3c-d52691b4dbfc